<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.edgehill.keidel.alexander.mymedicare.Activities.GPDetailsAcitivty">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsTitle"
            android:text="@string/gpdetailsTitle"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsFullNameEditText"
            android:hint="@string/gpdetailsFullName"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsAddressStreetEditText"
            android:hint="@string/addressLine1"
            android:gravity="center_horizontal"
            android:inputType="textPostalAddress"
            android:maxLines="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsAddressPostcodeEditText"
            android:hint="@string/addressLine2"
            android:gravity="center_horizontal"
            android:inputType="textPostalAddress"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsPhoneNumberEditText"
            android:hint="@string/phoneNumber"
            android:gravity="center_horizontal"
            android:inputType="phone"
            android:maxLines="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gpdetailsConfirmButton"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/confirm"/>
        </LinearLayout>
</RelativeLayout>
