<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_addNewReading"
        android:title="@string/action_addNewReading"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_accountManagement"
        android:title="@string/action_accountManagement"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_gpDetails"
        android:title="GP Details"
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"/>
</menu>